--- a/index.html
+++ b/index.html
@@ -3,101 +3,105 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>WebStudio</title>
 </head>
 
 <body>
         <!-- Header -->
     <header class="header">
-        <nav>
-            <a href="#">WebStudio</a>
-            <ul>
-                <li><a href="#">Студия</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Контакты</a></li>
+        <nav class="header-nav">
+            <a href="#" class="logo header-logo link"><span class="link-span">Web</span>Studio</a>
+            <ul class="header-list list">
+                <li class="header-item"><a class="header-link active link" href="#">Студия</a></li>
+                <li class="header-item"><a class="header-link link" href="#">Портфолио</a></li>
+                <li class="header-item"><a class="header-link link" href="#">Контакты</a></li>
             </ul>
         </nav>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            <ul class="header-contact list">
+                <li class="header-item"><a class="header-email-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-item"><a class="header-tel-link link" href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
             </ul>
     </header>
 
     <!-- Main -->
     <main>
-        <section>
-            <h1>Эффективные решения <br>для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="first-section">
+            <h1 class="first-title">Эффективные решения для вашего бизнеса</h1>
+            <button class="first-section-btn btn" type="button">Заказать услугу</button>
         </section>
 
         <!-- Benefits -->
-        <section>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также <br> начало повседневной работы по <br> формированию позиции.</p>
+        <section class="benefits-class">
+            <ul class="benefits-list list">
+                <li class="benefits-list-item">
+                    <h3 class="benefits-list-title">Внимание к деталям</h3>
+                    <p class="benefits-list-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности <br> же рамки и место обучения кадров <br> влечет за собой.</p>
+                <li class="benefits-list-item">
+                    <h3 class="benefits-list-title">Пунктуальность</h3>
+                    <p class="benefits-list-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с <br> широким активом в значительной <br> степени обуславливает.</p>
+                <li class="benefits-list-item">
+                    <h3 class="benefits-list-title">Планирование</h3>
+                    <p class="benefits-list-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько <br> очевидна, что реализация плановых <br> заданий.</p>
+                <li class="benefits-list-item">
+                    <h3 class="benefits-list-title">Современные технологии</h3>
+                    <p class="benefits-list-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
 
         <!-- What we do -->
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li><img src="./images/img1.jpg" alt="Человек работает на компьютере" width="370"></li>
-                <li><img src="./images/img2.jpg" alt="Человек работает на смартфоне" width="370"></li>
-                <li><img src="./images/img3.jpg" alt="Человек работает на планшете" width="370"></li>
+        <section class="wwd-section">
+            <h2 class="wwd-title">Чем мы занимаемся</h2>
+            <ul class="wwd-list list">
+                <li class="wwd-list-item"><img src="./images/img1.jpg" alt="Человек работает на компьютере" width="370"></li>
+                <li class="wwd-list-item"><img src="./images/img2.jpg" alt="Человек работает на смартфоне" width="370"></li>
+                <li class="wwd-list-item"><img src="./images/img3.jpg" alt="Человек работает на планшете" width="370"></li>
             </ul>
         </section>
 
         <!-- Our Team -->
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
+        <section class="team-section">
+            <h2 class="team-title">Наша команда</h2>
+            <ul class="team-list list">
+                <li class="team-list-item">
                     <img src="./images/personal1.jpg" alt="Игорь Демьяненко-Product Designer" width="270" />
-                    <h2>Игорь Демьяненко</h2>
-                    <p lang="en">Product Designer</p>
+                    <h2 class="team-list-item-title">Игорь Демьяненко</h2>
+                    <p class="team-list-item-text" lang="en">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img src="./images/personal2.jpg" alt="Ольга Репина-Frontend Developer" width="270" />
-                    <h2>Ольга Репина</h2>
-                    <p lang="en">Frontend Developer</p>
+                    <h2 class="team-list-item-title">Ольга Репина</h2>
+                    <p class="team-list-item-text" lang="en">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img src="./images/personal3.jpg" alt="Николай Тарасов-Marketing" width="270" />
-                    <h2>Николай Тарасов</h2>
-                    <p lang="en">Marketing</p>
+                    <h2 class="team-list-item-title">Николай Тарасов</h2>
+                    <p class="team-list-item-text" lang="en">Marketing</p>
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img src="./images/personal4.jpg" alt="Михаил Ермаков-UI Designer" width="270" />
-                    <h2>Михаил Ермаков</h2>
-                    <p lang="en">UI Designer</p>
+                    <h2 class="team-list-item-title">Михаил Ермаков</h2>
+                    <p class="team-list-item-text" lang="en">UI Designer</p>
                 </li>         
             </ul>
         </section>
     </main>
 
     <!-- Footer -->
-    <footer>
-        <a href="#">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <footer class="footer">
+        <a href="#" class="footer-logo link"><span class="link-span">Web</span>Studio</a>
+        <address class="footer-address">г. Киев, пр-т Леси Украинки, 26</address>
+        <ul class="footer-list list">
+            <li class="footer-item"><a class="footer-email-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="footer-item"><a class="footer-tel-link link" href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
         </ul>
     </footer>
 </body>
