--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#" class="logo header-logo link"><span class="link-span">Web</span>Studio</a>
             <ul class="header-list list">
                 <li class="header-item"><a class="header-link active link" href="#">Студия</a></li>
-                <li class="header-item"><a class="header-link link" href="#">Портфолио</a></li>
+                <li class="header-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
                 <li class="header-item"><a class="header-link link" href="#">Контакты</a></li>
             </ul>
         </nav>
