--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/stylesportfolio.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
         <nav class="header-nav">
             <a href="#" class="logo header-logo link"><span class="link-span">Web</span>Studio</a>
             <ul class="header-list list">
-                <li class="header-item"><a class="header-link link" href="#">Студия</a></li>
+                <li class="header-item"><a class="header-link link" href="./index.html">Студия</a></li>
                 <li class="header-item"><a class="header-link active link" href="#">Портфолио</a></li>
                 <li class="header-item"><a class="header-link link" href="#">Контакты</a></li>
             </ul>
@@ -34,11 +34,11 @@
         <section>
             <nav class="filter-nav">
                 <ul class="filter-list list">
-                    <li class="filter-item"><a class="filter-link active link" href="#">Все</a></li>
-                    <li class="filter-item"><a class="filter-link link" href="#">Веб-сайты</a></li>
-                    <li class="filter-item"><a class="filter-link link" href="#">Приложения</a></li>
-                    <li class="filter-item"><a class="filter-link link" href="#">Дизайн</a></li>
-                    <li class="filter-item"><a class="filter-link link" href="#">Маркетинг</a></li>
+                    <li class="filter-item"><button class="filter-link active link" href="#">Все</button></li>
+                    <li class="filter-item"><button class="filter-link link" href="#">Веб-сайты</button></li>
+                    <li class="filter-item"><button class="filter-link link" href="#">Приложения</button></li>
+                    <li class="filter-item"><button class="filter-link link" href="#">Дизайн</button></li>
+                    <li class="filter-item"><button class="filter-link link" href="#">Маркетинг</button></li>
                 </ul>
             </nav>
             <ul class="product-list list">
